@@ -1,7 +1,13 @@
 apt-clone (0.3.1~ubuntu5) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Avoid using "sudo chown" in tests if all files are already owned by the
     calling user.
+
+  [ Steve Langasek ]
+  * TestClone.test_restore_state_simulate: update to use distro_info like
+    TestCloneUpgrade.test_clone_upgrade_synthetic does, now that natty is
+    EOL.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 01 Jul 2013 15:23:40 +0100
 
